Fixed sidebar tab color in dark mode

--- a/ghostwriter/static/css/styles.css
+++ b/ghostwriter/static/css/styles.css
@@ -4199,7 +4199,9 @@ input[type="color"]:focus,
   color: #fff;
 }
 
-
+[data-theme="dark"] .sidebar-header-tab {
+  color: var(--ghost-white);
+}
 
 /* File input overlap fix */
 .custom-file {
